# current-now

atlas-personal/: NOTICE.txt  README.md  (+1 more)
atlas-personal/work/projects/devOS/atlas-tui/delegated/atlas-tui/: pyproject.toml
atlas-personal/work/projects/devOS/atlas-tui/delegated/atlas-tui/atlas_tui/: cli.py  dummy_engine.py  models.py
atlas-personal/work/projects/devOS/atlas-tui/repo/: README.md  pyproject.toml
atlas-personal/work/projects/devOS/atlas-tui/repo copy/3d_printed/: README.md  pyproject.toml  run.ps1  run_tests.ps1  sitecustomize.py
atlas-personal/work/projects/devOS/atlas-tui/repo copy/3d_printed/specs/: binding-schema-template.md  end-result-spec.md  executor-spec-deterministic.md  phased-implementation-plan.md
atlas-personal/work/projects/devOS/atlas-tui/repo copy/3d_printed/src/atlas_tui/: __init__.py  cli.py  determinism.py  dummy_engine.py  engine_client.py  log_writer.py  models.py  state_store.py  ui_events.py  ui_observability.py  ui_snapshot.py  workspace.py
atlas-personal/work/projects/devOS/atlas-tui/repo copy/3d_printed/tests/: _path.py  test_engine_protocol_roundtrip.py  test_event_logging.py  test_events_schema.py  test_glass_endpoints_smoke.py  test_log_writer_smoke.py  test_snapshot_logging.py  test_snapshot_schema.py  test_ui_smoke.py
atlas-personal/work/projects/devOS/atlas-tui/repo/docs/: AUTH.md  V2.md
atlas-personal/work/projects/devOS/atlas-tui/repo/docs/atlas/projections/: execute-opencode.md
atlas-personal/work/projects/devOS/atlas-tui/repo/src/atlas_tui/: cli.py  dummy_engine.py  engine_client.py  log_writer.py  models.py  state_store.py  workspace.py
atlas-personal/work/projects/devOS/atlas-tui/repo/src/atlas_tui.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
atlas-personal/work/projects/devOS/atlas-tui/repo/tests/: test_engine_client_smoke.py  test_state_store_smoke.py  test_workspace.py
atlas-personal/work/projects/devOS/marcopolo/repo/: .gitignore  CHANGELOG.md  pyproject.toml
atlas-personal/work/projects/devOS/marcopolo/repo/config/: defaults.json
atlas-personal/work/projects/devOS/marcopolo/repo/docs/: SPEC_PACK_V0.md
atlas-personal/work/projects/devOS/marcopolo/repo/examples/: airlock_report.json  marco.md
atlas-personal/work/projects/devOS/marcopolo/repo/schemas/: marco_span.schema.json
atlas-personal/work/projects/devOS/marcopolo/repo/src/marcopolo/: cli.py  draft.py  match.py  util.py  verify.py
atlas-personal/work/projects/devOS/marcopolo/repo/tests/: test_airlock.py
(+162 files in other folders)
