[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "marcopolo"
version = "0.1.0"
description = "Trace-first verification and conservative preprocessing for MARCO/POLO pairs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "scikit-learn>=1.3",
  "numpy>=1.24",
]

[project.scripts]
marcopolo = "marcopolo.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
